--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: David Lumpkin
 author: @japandavid
 email: davidlumpkin@gmail.com
+theme: minima
 description: > # this means to ignore newlines until "baseurl:"
   Description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
