--- a/_config.yml
+++ b/_config.yml
@@ -12,3 +12,5 @@ twitter_username: davidlumpkin  # DO NOT include the @ character, or else the bu
 github_username:  japandavid # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
+
+# Notes: 
